crates/codegen/tests/snapshots/snapshots__saas-tenant__postgres__organisation.snap
---
source: crates/codegen/tests/snapshots.rs
expression: content
---
#![allow(clippy::all, clippy::pedantic, unused_imports)]
use ::ruprizzle::serde::{Deserialize, Serialize};
use ::ruprizzle::sqlx::any::AnyRow;
use ::ruprizzle::types::chrono::{DateTime, NaiveDate, NaiveTime, Utc};
use ::ruprizzle::types::{Decimal, Uuid};
use ::ruprizzle::serde_json::Value as JsonValue;
use ::ruprizzle::Related;
use ::ruprizzle::Column;
///A tenant.
#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct Organisation {
    pub id: Uuid,
    pub slug: String,
    pub plan: super::enums::Plan,
    ///Free-form tenant configuration; genuinely schemaless, so `Json` earns it.
    pub settings: Option<JsonValue>,
    #[serde(skip_serializing_if = "::ruprizzle::Related::is_absent", default)]
    pub members: ::ruprizzle::Related<Vec<super::membership::Membership>>,
    pub created_at: DateTime<Utc>,
}
impl<'r> ::ruprizzle::sqlx::FromRow<'r, AnyRow> for Organisation {
    fn from_row(row: &'r AnyRow) -> Result<Self, ::ruprizzle::sqlx::Error> {
        Ok(Self {
            id: ::ruprizzle::decode::text_idx::<Uuid>(row, 0)?,
            slug: ::ruprizzle::decode::direct_idx::<String>(row, 1)?,
            plan: ::ruprizzle::decode::text_idx::<super::enums::Plan>(row, 2)?,
            settings: ::ruprizzle::decode::json_opt_idx(row, 3)?,
            members: ::ruprizzle::Related::default(),
            created_at: ::ruprizzle::decode::text_idx::<DateTime<Utc>>(row, 4)?,
        })
    }
}
/// Insert shape: required fields are required, defaulted/optional fields
/// are `Option` so the database can fill them in.
#[derive(Debug, Clone, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct OrganisationInsert {
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub id: Option<Uuid>,
    pub slug: String,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub plan: Option<super::enums::Plan>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub settings: Option<JsonValue>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub created_at: Option<DateTime<Utc>>,
}
/// Update shape: every field is `Option` to support explicit nulls.
#[derive(Debug, Clone, Default, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct OrganisationUpdate {
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub id: Option<Uuid>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub slug: Option<String>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub plan: Option<super::enums::Plan>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub settings: Option<Option<JsonValue>>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub created_at: Option<DateTime<Utc>>,
}
impl ::ruprizzle::Model for Organisation {
    const TABLE: &'static str = "organisations";
    const PRIMARY_KEY: &'static str = "id";
    const COLUMNS: &'static [&'static str] = &[
        "id",
        "slug",
        "plan",
        "settings",
        "created_at",
    ];
}
/// Table name for this model.
pub const TABLE: &str = "organisations";
pub const ID: Column<Organisation, Uuid> = Column::new("organisations", "id");
pub const SLUG: Column<Organisation, String> = Column::new("organisations", "slug");
pub const PLAN: Column<Organisation, super::enums::Plan> = Column::new(
    "organisations",
    "plan",
);
pub const SETTINGS: Column<Organisation, JsonValue> = Column::new(
    "organisations",
    "settings",
);
pub const CREATED_AT: Column<Organisation, DateTime<Utc>> = Column::new(
    "organisations",
    "created_at",
);
/// Returns an `IncludeList` for this relation.
pub fn members() -> ::ruprizzle::IncludeList<
    'static,
    Organisation,
    super::membership::Membership,
    Uuid,
    (),
> {
    ::ruprizzle::IncludeList::new(
        |__row| __row.id,
        |__row, __loaded| __row.members = __loaded,
        super::membership::ORG_ID,
        |__child| __child.org_id,
    )
}
/// Returns a filter for parents that have at least one matching child.
pub fn members_some(
    f: ::ruprizzle::Filter<super::membership::Membership>,
) -> ::ruprizzle::Filter<Organisation> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "memberships",
        child_col: "org_id",
        parent_table: "organisations",
        parent_col: "id",
        filter: Box::new(f.node),
        negated: false,
    })
}
/// Returns a filter for parents that have no matching child.
pub fn members_none(
    f: ::ruprizzle::Filter<super::membership::Membership>,
) -> ::ruprizzle::Filter<Organisation> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "memberships",
        child_col: "org_id",
        parent_table: "organisations",
        parent_col: "id",
        filter: Box::new(f.node),
        negated: true,
    })
}
/// Returns a filter for parents where every matching child satisfies `f`.
/// Vacuously true for parents with no children.
pub fn members_every(
    f: ::ruprizzle::Filter<super::membership::Membership>,
) -> ::ruprizzle::Filter<Organisation> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "memberships",
        child_col: "org_id",
        parent_table: "organisations",
        parent_col: "id",
        filter: Box::new((!f).node),
        negated: true,
    })
}
/// Prisma-flavoured repository for `#model_name`.
#[derive(Debug, Clone, Copy)]
pub struct OrganisationRepo<'a> {
    db: &'a super::Db,
}
impl<'a> OrganisationRepo<'a> {
    /// Creates a new repository handle.
    pub(crate) fn new(db: &'a super::Db) -> Self {
        Self { db }
    }
    /// Start a `find_many` query.
    pub fn find_many(&self) -> ::ruprizzle::SelectQuery<'a, Organisation> {
        ::ruprizzle::SelectQuery::new(self.db.raw_pool())
    }
    /// Start an `insert` query.
    pub fn create(
        &self,
        _data: OrganisationInsert,
    ) -> ::ruprizzle::InsertQuery<'a, Organisation> {
        let mut insert = ::ruprizzle::InsertQuery::new(self.db.raw_pool());
        insert = insert.set_optional(ID, _data.id);
        insert = insert.set(SLUG, _data.slug);
        insert = insert.set_optional(PLAN, _data.plan);
        insert = insert.set_optional(SETTINGS, _data.settings);
        insert = insert.set_optional(CREATED_AT, _data.created_at);
        insert
    }
    /// Start a multi-row `insert` query.
    pub fn create_many(
        &self,
        _data: Vec<OrganisationInsert>,
    ) -> ::ruprizzle::InsertManyQuery<'a, Organisation> {
        let mut q = ::ruprizzle::InsertManyQuery::new(self.db.raw_pool());
        for _row in _data {
            q = q
                .row([
                    ("id", ::ruprizzle::Encodable::to_value(&_row.id)),
                    ("slug", ::ruprizzle::Encodable::to_value(&_row.slug)),
                    ("plan", ::ruprizzle::Encodable::to_value(&_row.plan)),
                    ("settings", ::ruprizzle::Encodable::to_value(&_row.settings)),
                    ("created_at", ::ruprizzle::Encodable::to_value(&_row.created_at)),
                ]);
        }
        q
    }
    /// Start an `update` query.
    pub fn update(&self) -> ::ruprizzle::UpdateQuery<'a, Organisation> {
        ::ruprizzle::UpdateQuery::new(self.db.raw_pool())
    }
    /// Start a `delete` query.
    pub fn delete(&self) -> ::ruprizzle::DeleteQuery<'a, Organisation> {
        ::ruprizzle::DeleteQuery::new(self.db.raw_pool())
    }
}
